Code smells: Proyecciones y mapeos faltantes