@@ -14,7 +14,6 @@ import com.economato.inventory.repository.InventoryAuditRepository;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional(rollbackFor = { InvalidOperationException.class, ResourceNotFoundException.class, RuntimeException.class,
@@ -34,14 +33,14 @@ public class InventoryAuditService {
     @Transactional(readOnly = true)
     public List<InventoryMovementResponseDTO> findAll(Pageable pageable) {
         return repository.findAllProjectedBy(pageable).stream()
-                .map(this::toResponseDTO)
-                .collect(Collectors.toList());
+                .map(inventoryMovementMapper::toResponseDTO)
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public Optional<InventoryMovementResponseDTO> findById(Integer id) {
         return repository.findProjectedById(id)
-                .map(this::toResponseDTO);
+                .map(inventoryMovementMapper::toResponseDTO);
     }
 
     @Async
@@ -53,41 +52,15 @@ public class InventoryAuditService {
     @Transactional(readOnly = true)
     public List<InventoryMovementResponseDTO> findByMovementType(String type) {
         return repository.findProjectedByMovementType(type).stream()
-                .map(this::toResponseDTO)
-                .collect(Collectors.toList());
+                .map(inventoryMovementMapper::toResponseDTO)
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public List<InventoryMovementResponseDTO> findByMovementDateBetween(java.time.LocalDateTime start,
             java.time.LocalDateTime end) {
         return repository.findProjectedByMovementDateBetween(start, end).stream()
-                .map(this::toResponseDTO)
-                .collect(Collectors.toList());
-    }
-
-    private InventoryMovementResponseDTO toResponseDTO(
-            com.economato.inventory.dto.projection.InventoryAuditProjection projection) {
-        InventoryMovementResponseDTO dto = new InventoryMovementResponseDTO();
-        dto.setId(projection.getId());
-        dto.setQuantity(projection.getQuantity());
-        dto.setMovementType(projection.getMovementType());
-        dto.setMovementDate(projection.getMovementDate());
-        dto.setPreviousState(projection.getPreviousState());
-        dto.setNewState(projection.getNewState());
-
-        if (projection.getProduct() != null) {
-            dto.setProductId(projection.getProduct().getId());
-            dto.setProductName(projection.getProduct().getName());
-            dto.setCurrentStock(projection.getProduct().getCurrentStock());
-            // Replicating existing mapper logic for previousStock (uses current stock)
-            dto.setPreviousStock(projection.getProduct().getCurrentStock());
-        }
-
-        if (projection.getUsers() != null) {
-            dto.setUserId(projection.getUsers().getId());
-            dto.setUserName(projection.getUsers().getName());
-        }
-
-        return dto;
+                .map(inventoryMovementMapper::toResponseDTO)
+                .toList();
     }
 }
